-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 4.6.0-beta1
-
None
-
macOS 10.13
Opened qtcreator-super.pro, and a few files, after opening archdetect.cpp from Qt 5.10 I got this crash:
Exception Type: EXC_BAD_ACCESS (SIGSEGV)
Exception Codes: KERN_INVALID_ADDRESS at 0x0000000000000078
Exception Note: EXC_CORPSE_NOTIFY
Termination Signal: Segmentation fault: 11
Termination Reason: Namespace SIGNAL, Code 0xb
Terminating Process: exc handler [0]
VM Regions Near 0x78:
-->
__TEXT 000000010b68c000-000000010b6a6000 [ 104K] r-x/rwx SM=COW /Users/USER/*/Qt Creator.app/Contents/MacOS/Qt Creator
Thread 0 Crashed:: Dispatch queue: com.apple.main-thread
0 libClangsupport_debug.4.5.82.dylib 0x00000001175d4dc4 ClangBackEnd::ConnectionClient::isConnected() const + 20 (connectionclient.cpp:79)
1 libClangCodeModel_debug.dylib 0x00000001173d3ee4 ClangCodeModel::Internal::BackendSender::requestToolTip(ClangBackEnd::RequestToolTipMessage const&) + 36 (clangbackendsender.cpp:125)
2 libClangCodeModel_debug.dylib 0x00000001173b8147 ClangCodeModel::Internal::BackendCommunicator::requestToolTip(ClangBackEnd::FileContainer const&, unsigned int, unsigned int) + 135 (clangbackendcommunicator.cpp:399)
3 libClangCodeModel_debug.dylib 0x00000001173f8e56 ClangCodeModel::Internal::ClangEditorDocumentProcessor::toolTipInfo(QByteArray const&, int, int) + 102 (clangeditordocumentprocessor.cpp:380)
4 libClangCodeModel_debug.dylib 0x000000011740e6e6 ClangCodeModel::Internal::editorDocumentHandlesToolTipInfo(TextEditor::TextEditorWidget*, int) + 246 (clanghoverhandler.cpp:97)
5 libClangCodeModel_debug.dylib 0x000000011740e155 ClangCodeModel::Internal::ClangHoverHandler::identifyMatch(TextEditor::TextEditorWidget*, int, std::__1::function<void (int)>) + 389 (clanghoverhandler.cpp:131)
6 libTextEditor_debug.dylib 0x00000001120a949f TextEditor::BaseHoverHandler::process(TextEditor::TextEditorWidget*, int, std::__1::function<void (int)>) + 255 (basehoverhandler.cpp:122)
7 libTextEditor_debug.dylib 0x00000001120a9337 TextEditor::BaseHoverHandler::checkPriority(TextEditor::TextEditorWidget*, int, std::__1::function<void (int)>) + 183 (basehoverhandler.cpp:51)
8 libTextEditor_debug.dylib 0x0000000111f37be0 TextEditor::Internal::HoverHandlerRunner::checkNext() + 208 (texteditor.cpp:349)
9 libTextEditor_debug.dylib 0x0000000111f0e2a2 TextEditor::Internal::HoverHandlerRunner::startChecking(QTextCursor const&, QPoint const&) + 418 (texteditor.cpp:335)
10 libTextEditor_debug.dylib 0x0000000111f0e0cb TextEditor::Internal::TextEditorWidgetPrivate::processTooltipRequest(QTextCursor const&) + 219 (texteditor.cpp:3464)
11 libTextEditor_debug.dylib 0x0000000111f0f11b TextEditor::TextEditorWidget::viewportEvent(QEvent*) + 1019 (texteditor.cpp:3537)
12 org.qt-project.QtWidgets 0x000000010c0f2524 QAbstractScrollAreaFilter::eventFilter(QObject*, QEvent*) + 36
13 org.qt-project.QtCore 0x000000010cc90c62 QCoreApplicationPrivate::sendThroughObjectEventFilters(QObject*, QEvent*) + 210
14 org.qt-project.QtWidgets 0x000000010c00498d QApplicationPrivate::notify_helper(QObject*, QEvent*) + 285
15 org.qt-project.QtWidgets 0x000000010c006144 QApplication::notify(QObject*, QEvent*) + 1540
16 org.qt-project.QtCore 0x000000010cc9097f QCoreApplication::notifyInternal2(QObject*, QEvent*) + 159
17 org.qt-project.QtWidgets 0x000000010c0030c1 QApplication::event(QEvent*) + 1041
18 org.qt-project.qtcreator 0x000000010b692991 SharedTools::QtSingleApplication::event(QEvent*) + 145 (qtsingleapplication.cpp:125)
19 org.qt-project.QtWidgets 0x000000010c0049a2 QApplicationPrivate::notify_helper(QObject*, QEvent*) + 306
20 org.qt-project.QtWidgets 0x000000010c005cbf QApplication::notify(QObject*, QEvent*) + 383
21 org.qt-project.QtCore 0x000000010cc9097f QCoreApplication::notifyInternal2(QObject*, QEvent*) + 159
22 org.qt-project.QtCore 0x000000010cce787a QTimerInfoList::activateTimers() + 890
23 libqcocoa.dylib 0x000000010ed89bc2 QCocoaEventDispatcherPrivate::activateTimersSourceCallback(void*) + 18
24 com.apple.CoreFoundation 0x00007fff411705a1 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ + 17
25 com.apple.CoreFoundation 0x00007fff4122a35c __CFRunLoopDoSource0 + 108
26 com.apple.CoreFoundation 0x00007fff41153040 __CFRunLoopDoSources0 + 208
27 com.apple.CoreFoundation 0x00007fff411524bd __CFRunLoopRun + 1293
28 com.apple.CoreFoundation 0x00007fff41151d23 CFRunLoopRunSpecific + 483
29 com.apple.HIToolbox 0x00007fff40469e26 RunCurrentEventLoopInMode + 286
30 com.apple.HIToolbox 0x00007fff40469b96 ReceiveNextEventCommon + 613
31 com.apple.HIToolbox 0x00007fff40469914 _BlockUntilNextEventMatchingListInModeWithFilter + 64
32 com.apple.AppKit 0x00007fff3e734f5f _DPSNextEvent + 2085
33 com.apple.AppKit 0x00007fff3eecab4c -[NSApplication(NSEvent) _nextEventMatchingEventMask:untilDate:inMode:dequeue:] + 3044
34 com.apple.AppKit 0x00007fff3e729d6d -[NSApplication run] + 764
35 libqcocoa.dylib 0x000000010ed8a89d QCocoaEventDispatcher::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) + 2397
36 org.qt-project.QtCore 0x000000010cc8c502 QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) + 418
37 org.qt-project.QtCore 0x000000010cc91092 QCoreApplication::exec() + 402
38 org.qt-project.qtcreator 0x000000010b69a8c0 main + 13168 (main.cpp:546)
39 libdyld.dylib 0x00007fff68a55115 start + 1
- is duplicated by
-
QTCREATORBUG-19664 Segfault in Clang Code model
-
- Closed
-