src/plugins/clangcodemodel/clangbackendcommunicator.h
@@ -147,7 +147,7 @@ private:
     BackendReceiver m_receiver;
     ClangBackEnd::ClangCodeModelConnectionClient m_connection;
     QTimer m_backendStartTimeOut;
-    QScopedPointer<BackendSender> m_sender;
+    QScopedPointer<ClangBackEnd::ClangCodeModelServerInterface> m_sender;
     int m_connectedCount = 0;
 };
 
